--- a/index.html
+++ b/index.html
@@ -299,16 +299,16 @@
 				</div>
 				<div class="team__icons icons-team">
 					<div class="icons-team__item">
-						<img src="/img/team/01.png" alt="">
+						<img src="img/team/01.png" alt="">
 					</div>
 					<div class="icons-team__item">
-						<img src="/img/team/01.png" alt="">
+						<img src="img/team/01.png" alt="">
 					</div>
 					<div class="icons-team__item">
-						<img src="/img/team/01.png" alt="">
+						<img src="img/team/01.png" alt="">
 					</div>
 					<div class="icons-team__item">
-						<img src="/img/team/01.png" alt="">
+						<img src="img/team/01.png" alt="">
 					</div>
 				</div>
 				<div class="team__text-slider text-slider">
